<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Control" Id="{40e53a86-8401-4ed8-b8d6-786a48036178}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_Control :
STRUCT
	bSetStatusOnAlgorithm	 : BOOL; //turn actor on
	bSetStatusOnManual		 : BOOL; //turn actor on
	bAlgorithmModeActivated  : BOOL; //activate algorithm control
	bManualModeActivated 	 : BOOL; //activate manual control
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>