<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_PumpGrundfosMagna3SetParameters" Id="{431a032e-b8d7-4d7a-861f-0bdddf47f9e7}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_PumpGrundfosMagna3SetParameters :
STRUCT
	nControlModeAlgorithm : E_GrundfosMagna3ControlMode; //control mode in algorithm mode
	nControlModeManual : E_GrundfosMagna3ControlMode; //control mode in manual mode
	bReset : BOOL; //resets errors and warnings
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>